# clipclop

./: Cargo.toml  LICENSE  README.md  build.rs
cert/: ext.cnf  gen.sh
proto/: clipclop.proto
src/: client.rs  clipclop.rs  main.rs  scanner.rs  server.rs
