[package]
name = "clipclop"
version = "0.1.0"
authors = ["Stephen Wakely <fungus.humungus@gmail.com>"]
edition = "2018"

[dependencies]
tonic = { version = "0.4", features = ["tls"] }
prost = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs"] }
copypasta = "0.7"
clap = "2"
tracing = "0.1"
tracing-subscriber = "0.2"

[build-dependencies]
tonic-build = "0.4"
